--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "scalum"
-version = "1.1.5"
+version = "1.1.6"
 description = ""
 authors = ["Oguz Vuruskaner <ovuruska@outlook.com>"]
 packages = [
@@ -9,7 +9,7 @@ packages = [
 
 
 [tool.poetry.dependencies]
-python = "^3.5"
+python = "*"
 numpy = "*"
 
 [tool.poetry.dev-dependencies]
